Transfer. Completes up through Exercise 1.4.2 part (d).

--- a/macros.tex
+++ b/macros.tex
@@ -28,6 +28,7 @@
 % Logic
 \def\bic{\leftrightarrow}
 \newcommand{\propP}[1]{\prop{P}(#1)}
+\def\lxor{\veebar}
 
 % For set-buider notation
 \def\where{\mid}
